Login working somehow

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,6 +1,15 @@
 <div class="login-container">
   <form class="login-form form-horizontal">
     <div class="control-group">
+      <div class="login-errors"></div>
+    </div>
+    <div class="control-group">
+      <input type="text" name="email" placeholder="Email">
+    </div>
+    <div class="control-group">
+      <input type="password" name="password" placeholder="Password">
+    </div>
+    <div class="control-group">
       <button type="submit" class="btn btn-inverse">Sign in</button>
     </div>
   </form>
