--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -1,5 +1,8 @@
 <div class="container main">
   Header
+  <div id="account-menu">
+    Login
+  </div>
   <div class="row">
     <div id="content"></div>
   </div>
