--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -1,11 +1,15 @@
 <div class="container main">
-  Header
-  <div id="account-menu">
-    Login
+  <div id="header" class="row">
+    <div class="pull-left">
+      pinpoint.io
+    </div>
+    <div id="account-menu" class="pull-right"></div>
   </div>
   <div class="row">
     <div id="content"></div>
   </div>
-  Footer
+  <div id="footer" class="row">
+    Footer
+  </div>
 </div>
 
