--- a/public/templates/header/menu-logged-in.html
+++ b/public/templates/header/menu-logged-in.html
@@ -1,2 +1,6 @@
-<a id="sign-out" href="#">Sign out</a>
+<ul class="l-horizontal-list">
+  <li><a href="#/home">Home</a></li>
+  <li><a href="#/matches">Matches</a></li>
+  <li><a id="sign-out" href="#">Sign out</a></li>
+</ul>
 
