--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,7 +35,16 @@ a {
 }
 
 #header {
+  margin-top: 20px;
   border-bottom: 1px solid black;
+  #account-menu {
+    ul {
+      li {
+        margin-right: 10px;
+
+      }
+    }
+  }
 }
 
 #footer {
