Show/hide match details

--- a/public/templates/matches/company.html
+++ b/public/templates/matches/company.html
@@ -1,32 +1,74 @@
 <li class="company">
-  <img class="logo" src="http://b.vimeocdn.com/ps/423/361/4233611_300.jpg">
-  <div class="main">
-    <h2>UniversityNow</h2>
-    <div class="description">
-      UniversityNow was built and supported by a team of visionaries who could see the future and believe in the right that everyone has to higher education. Learn more about the UniversityNow team.
+  <div>
+    <img class="logo" src="http://b.vimeocdn.com/ps/423/361/4233611_300.jpg">
+    <div class="main">
+      <h2>UniversityNow</h2>
+      <div class="description">
+        UniversityNow was built and supported by a team of visionaries who could see the future and believe in the right that everyone has to higher education. Learn more about the UniversityNow team.
+      </div>
+      <ul class="tags l-horizontal-list">
+        <li>Social</li>
+        <li>Education</li>
+        <li>Freemium</li>
+        <li>Ruby/Rails</li>
+        <li>Agile</li>
+        <li>Heroku</li>
+      </ul>
+      <br class="clearfix" />
+      <ul class="badges l-horizontal-list">
+        <li><img src="/images/symbly_gamification_badges/acorn.png" /></li>
+        <li><img src="/images/symbly_gamification_badges/balloon.png" /></li>
+        <li><img src="/images/symbly_gamification_badges/sun.png" /></li>
+        <li><img src="/images/symbly_gamification_badges/coffee.png" /></li>
+        <li><img src="/images/symbly_gamification_badges/food.png" /></li>
+      </ul>
+      <br class="clearfix" />
     </div>
-    <ul class="tags l-horizontal-list">
-      <li>Social</li>
-      <li>Education</li>
-      <li>Freemium</li>
-      <li>Ruby/Rails</li>
-      <li>Agile</li>
-      <li>Heroku</li>
-    </ul>
-    <br class="clearfix" />
-    <ul class="badges l-horizontal-list">
-      <li><img src="/images/symbly_gamification_badges/acorn.png" /></li>
-      <li><img src="/images/symbly_gamification_badges/balloon.png" /></li>
-      <li><img src="/images/symbly_gamification_badges/sun.png" /></li>
-      <li><img src="/images/symbly_gamification_badges/coffee.png" /></li>
-      <li><img src="/images/symbly_gamification_badges/food.png" /></li>
-    </ul>
+    <div class="cta">
+      <button class="button green show-details">Show Me Details!</button>
+      <button class="button">Not Interested</button>
+    </div>
     <br class="clearfix" />
   </div>
-  <div class="cta">
-    <button class="button green">Show Me Details!</button>
-    <button class="button">Not Interested</button>
+  <div class="details" style="display: none;">
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
+    Some other shit here <br />
   </div>
-  <br class="clearfix" />
 </li>
 
