Profile and tags

--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -15,7 +15,7 @@
     <div class="control-group">
       <label class="control-label" for="inputSkills">Skills</label>
       <div class="controls">
-        <ul class="l-horizontal-list tags">
+        <ul class="l-horizontal-list tags skills">
           <li>Ruby/Rails</li>
           <li class="is-active">node.js</li>
           <li class="is-active">git</li>
@@ -28,7 +28,7 @@
     <div class="control-group">
       <label class="control-label" for="inputIndustry">Industry</label>
       <div class="controls">
-        <ul class="l-horizontal-list tags">
+        <ul class="l-horizontal-list tags industries">
           <li class="is-active">Social</li>
           <li class="is-active">Education</li>
           <li>Consumer</li>
@@ -41,7 +41,7 @@
     <div class="control-group">
       <label class="control-label" for="inputPosition">Position</label>
       <div class="controls">
-        <ul class="l-horizontal-list tags">
+        <ul class="l-horizontal-list tags positions">
           <li>Entry</li>
           <li>Junior</li>
           <li class="is-active">Senior</li>
