Tag creation and deletion

--- a/public/templates/tags/tag.html
+++ b/public/templates/tags/tag.html
@@ -1,2 +1,2 @@
-<li data-id="<%= model.get("id") %>"><%= model.get("value") %></li>
+<li data-tag-id="<%= model.get("id") %>"><%= model.get("value") %></li>
 
