--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <link rel='stylesheet' href='/bootstrap/css/bootstrap.min.css' />
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= csrf_meta_tags %>
+    <meta content="" name="auth-token">
     <script type="text/javascript" src="//use.typekit.net/lpk4dad.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <script src="/javascripts/libs/jquery/jquery-min.js"></script>
