--- a/public/templates/profile.html
+++ b/public/templates/profile.html
@@ -3,13 +3,13 @@
     <div class="control-group">
       <label class="control-label" for="inputName">Name</label>
       <div class="controls">
-        <input type="text" name="inputName" placeholder="Name">
+        <input type="text" class="user_field" name="inputName" placeholder="Name">
       </div>
     </div>
     <div class="control-group">
       <label class="control-label" for="inputEmail">Email</label>
       <div class="controls">
-        <input type="text" name="inputEmail" placeholder="Email">
+        <input type="text" class="user_field" name="inputEmail" placeholder="Email">
       </div>
     </div>
     <div class="control-group">
