--- a/public/templates/matches/company.html
+++ b/public/templates/matches/company.html
@@ -1,18 +1,16 @@
+<% company = match.get("company") %>
 <li class="company">
   <div>
     <img class="logo" src="http://b.vimeocdn.com/ps/423/361/4233611_300.jpg">
     <div class="main">
-      <h2>UniversityNow</h2>
+      <h2><%= company.name %></h2>
       <div class="description">
-        UniversityNow was built and supported by a team of visionaries who could see the future and believe in the right that everyone has to higher education. Learn more about the UniversityNow team.
+        <%= company.description %>
       </div>
       <ul class="tags l-horizontal-list">
-        <li>Social</li>
-        <li>Education</li>
-        <li>Freemium</li>
-        <li>Ruby/Rails</li>
-        <li>Agile</li>
-        <li>Heroku</li>
+        <% _.each(match.combinedSkillAndIndustryTags(), function(tag) { %>
+          <li><%= tag %></li>
+        <% }); %>
       </ul>
       <br class="clearfix" />
       <ul class="badges l-horizontal-list">
@@ -31,44 +29,9 @@
     <br class="clearfix" />
   </div>
   <div class="details" style="display: none;">
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
-    Some other shit here <br />
+    <% _.each(match.get("interest_decisions"), function(interest_decision) { %>
+      <%= interest_decision.name %><br/ >
+    <% }) %>
   </div>
 </li>
 
