fixed up some stuff on the login/signup page

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -1,4 +1,5 @@
 <div class="login-container">
+  <h2>Welcome back to pinpoint.io! Your home away from homepage.</h2>
   <form class="login-form form-horizontal">
     <div class="control-group">
       <div class="login-errors"></div>
@@ -13,8 +14,10 @@
       <button type="submit" class="button">Sign in</button>
     </div>
   </form>
+<a id="signup_a" style="cursor:pointer" onclick="toggle_signup()">Not a member? Create an account</a>
 </div>
-<div class="signup-container">
+<div class="signup-container" style="display:none;">
+  <h2>Welcome to pinpoint.io! Your new homepage.</h2>
   <form class="signup-form form-horizontal">
     <div class="control-group">
       <div class="signup-errors"></div>
@@ -23,14 +26,20 @@
       <input type="text" name="name" placeholder="Name">
     </div>
     <div class="control-group">
-      <input type="text" name="email" placeholder="Email">
+      <input type="text" name="s_email" placeholder="Email">
     </div>
     <div class="control-group">
-      <input type="password" name="password" placeholder="Password">
+      <input type="password" name="s_password" placeholder="Password">
     </div>
     <div class="control-group">
       <button type="submit" class="button">Sign up</button>
     </div>
   </form>
+<a id="signup_b" style="cursor:pointer" onclick="toggle_signup()">Already a member? Sign in</a>
 </div>
+<script>
+  var toggle_signup = function() {
+    $('.login-container, .signup-container').toggle();
+  }
+</script>
 
