Rejecting interest decisions for a company

--- a/public/templates/matches/company.html
+++ b/public/templates/matches/company.html
@@ -24,7 +24,7 @@
     </div>
     <div class="cta">
       <button class="button green show-details">Show Me Details!</button>
-      <button class="button">Not Interested</button>
+      <button class="button not-interested">Not Interested</button>
     </div>
     <br class="clearfix" />
   </div>
