updated window.pinpoint user info on change

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -15,7 +15,7 @@
         <button type="submit" class="button">Sign in</button>
       </div>
     </form>
-    <a class="signup_a clickable">Not a member? Create an account</a>
+    <a class="signup_a">Not a member? Create an account</a>
   </div>
   <div class="signup-container" style="display:none;">
     <h2>Welcome to pinpoint.io! Your new homepage.</h2>
